webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-rules.css
/*
*************************************************************************************
* Copyright 2017 Normation SAS
*************************************************************************************
*
* This file is part of Rudder.
*
* Rudder is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* In accordance with the terms of section 7 (7. Additional Terms.) of
* the GNU General Public License version 3, the copyright holders add
* the following Additional permissions:
* Notwithstanding to the terms of section 5 (5. Conveying Modified Source
* Versions) and 6 (6. Conveying Non-Source Forms.) of the GNU General
* Public License version 3, when you create a Related Module, this
* Related Module is not considered as a part of the work and may be
* distributed under the license agreement of your choice.
* A "Related Module" means a set of sources files including their
* documentation that, without modification of the Source Code, enables
* supplementary functions or services in addition to those offered by
* the Software.
*
* Rudder is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with Rudder.  If not, see <http://www.gnu.org/licenses/>.

*
*************************************************************************************
*/
#editRuleZone{
  font-size:14px;
}

#ruleComplianceTab {
  padding-left: 10px;
  padding-right: 10px;
}
#boxTreeRules{
  overflow-y: auto;
  overflow-x: hidden;
}
i#changeIconRule {
  min-width: 25px;
}
#submitSearch #SubmitSearch{
  margin-left: 7px;
}
label.rule-info{
  margin-bottom:0;
}
label.rule-info + div{
  color:#555;
}
#grid_rules_grid_zone_length label,#grid_rules_grid_zone_info{
  font-weight:normal;
  font-size:12px;
}
/* ----- </RULE FOOTER>  ----- */
.rule-footer {
  width: calc(100% - 230px);
  left: 230px;
  bottom: 0;
}
.skin-yellow.sidebar-collapse .rule-footer {
  width: calc(100% - 50px);
  left: 50px;
}
.new-icon.category:before{
  content:"Add category";
}
.content-wrapper .btn.btn-box-tool{
  padding-left:2px;
  padding-right:2px;
}
.new-icon.category + .btn.btn-box-tool > .fa{
  margin-left:0;
}
.recentChange_refresh{
  float: right;
  position: absolute;
  top: calc(50% - 17px);
  right: 8px;
}
#recentChanges {
  /** If we want to scroll correctly to recent changes we need to set a minimum height,
      or else when the graph appear (just after the scroll) we will only the the recent change section title
  */
  min-height: 300px;
}
#recentChanges .alert-info{
  position: relative;
  margin-top: 10px;
}

.targetContainer {
  min-height: 65px;
}
#details .dataTables_wrapper{
  margin: 10px 0 20px 0;
  float: left;
  width: 100%;
}
@media (min-width: 991px) and (max-width: 1300px){
  .new-icon.category:before{
    content:"Add";
    position:relative;
    left:2px;
  }
  .new-icon.category:after{
    content:"";
  }
}
@media (max-width: 767px){
  .skin-yellow.sidebar-collapse .rule-footer,.skin-yellow .rule-footer {
    width: 100%;
    left: 0;
    bottom: 0;
  }
}

/* Directive and Group sections */
#ruleDirectives,
#DirectiveCtrl,
#groupManagement,
#GroupCtrl,
.applied-list{
  float: left;
  width: 100%;
}

#ruleDirectives,
#groupManagement{
  margin-bottom: 30px;
}

h4.list-title{
  font-size: 16px;
  border-bottom: 4px solid #8fba2b;
  padding-bottom: 6px;
  margin-bottom: 14px;
  margin-top: 14px;
}

h4.list-title.except{
  border-bottom-color: #d43f3a;
}
ul.applied-list > li {
  border: 1px solid #e5e5e5;
  padding: 10px;
  padding-left: 14px;
  display: block;
  float: left;
  width: 100%;
  position: relative;
  background-color: #fff;
  padding-right: 50px;
  transition-duration: .2s;
  margin-bottom: 4px;
  border-left-width: 0px;
  box-shadow: 0px 5px 4px -3px rgba(0,0,0,.1);
}

ul.applied-list > li > .border{
  background-color: #e5e5e5;
  position: absolute;
  top: -1px;
  bottom: -1px;
  left: 0;
  width: 4px;
  transition-duration: .2s;
}
ul.applied-list > li:hover > .border{
  background-color: #ccc;
}
ul.applied-list > li > .target-remove:hover + .border{
  background-color: #da534f !important;
}

.applied-list > li.empty {
  border-left: 4px solid #3379b7;
  color: #777;
  font-style: italic;
}

.applied-list > li.empty + li {
  border-top-right-radius: 4px;
}
ul.applied-list > li:last-of-type {
  border-bottom-right-radius: 4px;
}
ul.applied-list > li > span.fa{
  color: #aaa;
  margin-right: 6px;
}

ul.applied-list > li .rudder-label{
  margin-right: 4px;
}

ul.applied-list > li .icon-info{
  color: #ccc;
  transition-duration: .2s;
}

ul.applied-list > li:hover .icon-info{
  color: #337ab7;
}

ul.applied-list > li > span.target-remove,
ul.applied-list > li > span.warning-sign{
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  width: 40px;
  transition: .2s;
  background-color: #fff;
  color: #999;
  border-left: 1px solid #e5e5e5;
  opacity: .6;
  cursor: pointer;
}
ul.applied-list > li > span.warning-sign{
  color: #fff;
  background-color: #3379b7;
  opacity: 1;
  cursor: default;
}
ul.applied-list > li > span.target-remove:hover{
  background-color: #da534f;
  color: #fff;
}

ul.applied-list > li:hover > span.target-remove{
  opacity: 1;
}

ul.applied-list > li > span.target-remove > i,
ul.applied-list > li > span.warning-sign  > i {
 position: absolute;
 top: calc( 50% - 7px);
 right: calc( 50% - 5.5px);
}

.add-target{
  margin-top: 4px;
  min-width: 150px;
}
ul.applied-list > .add-target > .fa{
  margin-left: 3px;
  position: relative;
  top: 1px;
}

#groupTree a.jstree-anchor{
  cursor: default !important;
}

#groupTree a.jstree-anchor{
  cursor: default !important;
}

#groupTree a.jstree-anchor.jstree-clicked{
  background-color: transparent;
  box-shadow: none !important;
}
#groupTree a.jstree-anchor.jstree-clicked:hover{
  background-color: #e7f4f9;
}
#groupTree a.jstree-anchor .treeActions{
  cursor: pointer !important;
}

.jstree ul > li .action-icon{
  color: #3c763d;
}
.jstree ul > li .action-icon.except{
  color: #a94442;
}
.jstree ul > li .action-icon:before{
  content: "\f055";
}
.jstree ul > li .action-icon.except:before{
  content: "\f056";
}
#directiveTree ul > li.included .action-icon,
#groupTree ul > li.included .action-icon.accept,
#groupTree ul > li.excluded .action-icon.except{
  color: #888;
}
#directiveTree ul > li.included .action-icon:before{
  content: "\f057";
}
#groupTree ul > li.included .action-icon.accept:before{
  content: "\f057";
}
#groupTree ul > li.excluded .action-icon.except:before{
  content: "\f057";
}

.modal .jstree ul > li a.jstree-anchor{
  margin-top: 1px;
  border: 1px solid transparent;
}

.jstree ul > li a.jstree-anchor{
  cursor: default !important;
}

.jstree ul > li a.jstree-anchor .treeAction,
.jstree ul > li a.jstree-anchor .action-icon{
  cursor: pointer !important;
}

.jstree .jstree-clicked{
  background-color: inherit;
  box-shadow: none !important;
}
.jstree .jstree-hovered.jstree-clicked{
  background-color: rgb(231, 244, 249);
}

